arm/network.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",

  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]"
    },

    "vnetName": {
      "type": "string"
    },

    "vnetAddressPrefix": {
      "type": "string"
    },

    "subnetName": {
      "type": "string"
    },

    "subnetPrefix": {
      "type": "string"
    },

    "nsgName": {
      "type": "string"
    }
  },

  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2024-05-01",
      "name": "[parameters('nsgName')]",
      "location": "[parameters('location')]",

      "properties": {
        "securityRules": [
          {
            "name": "Allow-HTTP",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",

              "sourcePortRange": "*",
              "destinationPortRange": "80",

              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },

          {
            "name": "Allow-LoadBalancer-Probe",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",

              "sourcePortRange": "*",
              "destinationPortRange": "80",

              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },

    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2024-05-01",
      "name": "[parameters('vnetName')]",
      "location": "[parameters('location')]",

      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
      ],

      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        },

        "subnets": [
          {
            "name": "[parameters('subnetName')]",

            "properties": {
              "addressPrefix": "[parameters('subnetPrefix')]",

              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
              }
            }
          }
        ]
      }
    }
  ],

  "outputs": {
    "vnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]"
    },

    "subnetId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('subnetName'))]"
    },

    "nsgId": {
      "type": "string",
      "value": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('nsgName'))]"
    }
  }
}
